still fixing footer aligning

--- a/04week/tomorrows-technology/css/style.css
+++ b/04week/tomorrows-technology/css/style.css
@@ -47,7 +47,7 @@ article:nth-of-type(2){
 }
 button{
     border: none;
-    background-color: gray;
+    background-color: rgb(107, 106, 106);
     font-size: 15px;
     color: white;
     width: 160px;
@@ -68,13 +68,14 @@ article li{
 
 /* desktop query */
 @media(min-width:992px){
-footer{
-    display: none;
+    footer{
+        display: none;
 }
 }
 
 /* tablet query */
-@media(max-width:768px){
+@media(max-width:768px)
+{
     body{
         border-bottom: 1px solid black;
     }
@@ -87,5 +88,56 @@ footer{
     }
     .nav{
         display: none;
+    }
+}
+
+/* phone query */
+@media(max-width:576px){
+    .nav{
+        display: none;
+    }
+    body{
+        border-bottom: none;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        display: block;
+    }
+    h1{
+        font-size: 20px;
+        font-weight: bold;
+    }
+    article p{
+        font-size: 18px;
+        font-weight: 500;
+    }
+    button{
+        margin: 20px;
+    }
+    footer{
+        display: flex;
+        justify-content: space-around;
+        background-color: rgb(107, 106, 106);
+        padding: 40px;
+        margin: -10px;
+    }
+    ul{
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+
+        
+    }
+    li{
+        border-bottom: 1px solid lightgray;
+        padding: 0 20px;
+        color: rgb(224, 224, 224);
+    }
+    h3{
+        font-weight: bold;
+        color: white;
+    }
+    section :last-child{
+    float: right;
+    align-items: flex-end;
+
     }
 }
